--- a/WPF/SampleApplecation/MainWindow.xaml
+++ b/WPF/SampleApplecation/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SampleApplecation"
         mc:Ignorable="d"
-        Title="Sampleapplecation" Height="450" Width="300" FontSize="14">
+        Title="Sampleapplecation" Height="450" Width="350" FontSize="14">
 
     <Grid>
         
@@ -25,22 +25,22 @@
 
         <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" Text="項目"/>
         <TextBlock Grid.Column="2" Text="設定値" />
-        <Label Grid.Row="1" Content="ON/OFF(_0)" />
-        <CheckBox x:Name="chackBox" Grid.Row="1" Grid.Column="1" Content="チェックしたらON"
+        <Label Grid.Row="1" Content="ON/OFF(_O)" Target="{Binding ElementName=chackBox,Mode=OneWay}"/>
+        <CheckBox x:Name="chackBox" Grid.Row="1" Grid.Column="1" Content="チェックしたらON" Unchecked="chackBox_Unchecked" Checked="chackBox_Checked"
                   VerticalAlignment="Center"/>
         <TextBlock  x:Name="checkBoxTextBlock" Grid.Row="1" Grid.Column="2"
                     VerticalAlignment="Center"/>
-        <Label Grid.Row="2" Content="色(_C)"/>
+        <Label Grid.Row="2" Content="色(_C)" Target="{Binding ElementName=redRedioButton,Mode=OneWay}"/>
         
         <StackPanel Grid.Row="2" Grid.Column="1">
-            <RadioButton x:Name="redRedioButton" GroupName="Color" Content="赤"/>
-            <RadioButton x:Name="yelloRedioButton" GroupName="Color" Content="黄"/>
-            <RadioButton x:Name="blueRedioButton" GroupName="Color" Content="青"/>
+            <RadioButton x:Name="redRedioButton" GroupName="Color" Content="赤" Checked="colorRedioButton_Checked"/>
+            <RadioButton x:Name="yelloRedioButton" GroupName="Color" Content="黄" Checked="colorRedioButton_Checked"/>
+            <RadioButton x:Name="blueRedioButton" GroupName="Color" Content="青" Checked="colorRedioButton_Checked"/>
         </StackPanel>
 
         <TextBlock x:Name="colorText" Grid.Column="2" Grid.Row="2"/>
-        <Label Grid.Row="3" Content="季節(_S)"/>
-        <ComboBox x:Name="seasonComboBox" Grid.Row="3" Grid.Column="1">
+        <Label Grid.Row="3" Content="季節(_S)" Target="{Binding ElementName=seasonComboBox,Mode=OneWay}"/>
+        <ComboBox x:Name="seasonComboBox" Grid.Row="3" Grid.Column="1" SelectionChanged="seasonComboBox_SelectionChanged">
             <ComboBoxItem Content="春"/>
             <ComboBoxItem Content="夏"/>
             <ComboBoxItem Content="秋"/>
