--- a/WPF/ColorChecker/MainWindow.xaml
+++ b/WPF/ColorChecker/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorChecker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="700">
+        Title="MainWindow" Height="300" Width="700" Loaded="Window_Loaded">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -34,15 +34,28 @@
             <TextBlock  Grid.Column="0" Grid.Row="1" Text="G" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBlock  Grid.Column="0" Grid.Row="2" Text="B" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-            <Slider x:Name="rSlider" Grid.Row="0" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged"/>
-            <Slider x:Name="gSlider" Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged"/>
-            <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged"/>
+            <Slider x:Name="rSlider" Grid.Row="0" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"/>
+            <Slider x:Name="gSlider" Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"/>
+            <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" Margin="10" VerticalAlignment="Center" Maximum="255" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"/>
 
-            <TextBox x:Name="rvalue" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=rSlider,Path=Value,UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}}"/>
-            <TextBox x:Name="gvalue" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=gSlider,Path=Value,UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}}"/>
-            <TextBox x:Name="bvalue" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=bSlider,Path=Value,UpdateSourceTrigger=PropertyChanged,StringFormat={}{0:0}}"/>
+            <TextBox x:Name="rvalue" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=rSlider,Path=Value,UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="gvalue" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=gSlider,Path=Value,UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="bvalue" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" FontSize="20" TextAlignment="Center" Text ="{Binding ElementName=bSlider,Path=Value,UpdateSourceTrigger=PropertyChanged}"/>
 
-            <ComboBox x:Name="colorSelectConboBox" Grid.Row="3" Grid.ColumnSpan="3" Width="Auto" VerticalAlignment="Center"/>
+            <ComboBox Grid.Row="3" Grid.ColumnSpan="3" ItemsSource="{Binding}" SelectedValue="{Binding Color}" Margin="10" Height="24" VerticalAlignment="Center" VerticalContentAlignment="Center" Width="155" SelectionChanged="colorSelectComboBox_SelectionChanged" x:Name="colorSelectComboBox">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Border Width="20" Height="Auto" Margin="5,0" BorderThickness="1" BorderBrush="Black"  >
+                                <Border.Background>
+                                    <SolidColorBrush Color="{Binding Color}"/>
+                                </Border.Background>
+                            </Border>
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
 
 
         </Grid>
@@ -53,18 +66,8 @@
                 <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
             <!--ここに書く-->
-            <Button x:Name="stockButton" Grid.Row="0" Content="STOCK" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Click="stockButton_Click"/>
-            <ListBox x:Name="stockList" Grid.Row="1" Grid.Column="2">
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-            </ListBox>
-
-
-
-
+            <Button x:Name="stockButton" Grid.Row="0" Content="STOCK" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" Click="stockButton_Click"/>
+            <ListBox x:Name="stockList" Grid.Row="1" Grid.Column="2" FontSize="21" SelectionChanged="stockList_SelectionChanged"/>
 
         </Grid>
 
