--- a/SQLite/CustomerApp/MainWindow.xaml
+++ b/SQLite/CustomerApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerApp"
         mc:Ignorable="d"
-        Title="顧客管理アプリケーション" Height="450" Width="800">
+        Title="顧客管理アプリケーション" Height="450" Width="1000">
     <Window.Resources>
         <local:ByteToImageConverter x:Key="ByteToImageConverter"/>
     </Window.Resources>
@@ -31,9 +31,9 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="20" Margin="0,15,5,0" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="PhoneTextBox" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="20" Margin="0,15,5,0" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="AddressTextBox" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="20" Margin="0,15,5,0" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="25" Margin="0,15,5,0" VerticalContentAlignment="Center" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="PhoneTextBox" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="25" Margin="0,15,5,0" VerticalContentAlignment="Center" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="AddressTextBox" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" FontSize ="25" Margin="0,15,5,0" VerticalContentAlignment="Center" TextChanged="TextBox_TextChanged"/>
             
             <TextBlock Grid.Row="0" Grid.Column="0" Text="名前" FontSize ="25" 
                        HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Center"/>
@@ -51,7 +51,7 @@
                     FontSize ="25"  IsEnabled="False" Click="DeleteButton_Click"/>
 
             <Button Grid.Row="4" Grid.Column="0" x:Name="PictureButton" Content="画像"
-                    FontSize ="25" Margin="10,15" Click="PictureButton_Click"/>
+                    FontSize ="25" Margin="10,15" Height="80" Click="PictureButton_Click" VerticalAlignment="Top"/>
 
             <Border Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
                 BorderBrush="Gray" BorderThickness="2" CornerRadius="5" Margin="10,10">
@@ -69,23 +69,23 @@
                 <RowDefinition Height="7*" />
             </Grid.RowDefinitions>
 
-            <TextBox Grid.Row="0" x:Name="SearchTextBox" Margin="0,15,0,0" FontSize="20" TextChanged="SearchTextBox_TextChanged"/>
+            <TextBox Grid.Row="0" x:Name="SearchTextBox" Margin="0,15,0,0" FontSize="25" TextChanged="SearchTextBox_TextChanged"/>
             <ListView Grid.Row="1" x:Name="PersonListView" Margin="0,5,0,0" Height="600" SelectionChanged="PersonListView_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        
-                        <StackPanel Orientation="Horizontal" Margin="5">
-                            <Image Source="{Binding Picture, Converter={StaticResource ByteToImageConverter}}"
-                                   Width="50" Height="60" Margin="5" Stretch="UniformToFill"/>
 
-                            <StackPanel>
-                                <TextBlock Text="{Binding Name}" FontSize="20"/>
-                                <TextBlock Text="{Binding Phone}" Foreground="Blue"/>
-                                <TextBlock Text="{Binding Address}" Foreground="Gray"/>
-                            </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+
+                            <Image Source="{Binding Picture, Converter={StaticResource ByteToImageConverter}}"
+                            Width="160" Height="100" Margin="5" Stretch="UniformToFill"/>
                             
+                            <StackPanel>
+                                <TextBlock Text="{Binding Name}" FontSize="25" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding Phone}" FontSize="25" Foreground="Blue" FontWeight="Bold"/>
+                                <TextBlock Text="{Binding Address}" FontSize="22" Foreground="Gray" FontWeight="Bold"/>
+                            </StackPanel>
+
                         </StackPanel>
-                        
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
